--- a/assets/sccs/styles.scss
+++ b/assets/sccs/styles.scss
@@ -37,20 +37,23 @@
 @import "components/modul_sliderInfoTeaser";
 @import "components/modul_sliderTextBildTeaser";
 @import "components/modul_sliderHistory";
+@import "components/modul_sliderTeam";
+@import "components/modul_allesNeue";
 @import "components/modul_kontaktFormular";
 @import "components/modul_formularAntwort";
 @import "components/formular";
-
+@import "components/modul_blog";
+@import "components/blog-detail";
 
 /*
 @import "components/pagination-blog";
 @import "components/pagination-news";
 @import "components/pagination-entry";
 @import "components/modul_entry";
-@import "components/modul_blog";
+
 @import "components/modul_news";
 @import "components/modul_entry";
-@import "components/blog-detail";
+
 @import "components/news-detail";
 @import "components/entry-detail";
 */
