--- a/templates/_include-block-components/modul_blog.twig
+++ b/templates/_include-block-components/modul_blog.twig
@@ -82,18 +82,9 @@
 </script>
 
 <div class="anchor" id="{{ 'anker' ~ blockid }}"></div>
-<section class="blog-wrapper-outer modul-blog" id="result">
+<div class="anchor" id="result"></div>
+<section class="blog-wrapper-outer modul-aktuelles">
     <div class="wl-wrapper">
-
-    {% if ausgabeNur3Teaser%}
-    <div class="einleitung grid-container content-grid-12">
-        <div class="body-einleitung">
-            {% if headline %}
-                <h2>{{ headline|nl2br }}</h2>
-            {% endif %}
-        </div>
-    </div>
-    {% endif %}
 
     {% set allCategory = craft.categories.group('blogCat') %}
     {% set categoryStr = ''  %}
@@ -105,28 +96,24 @@
         {% set buttonArr = buttonArr|merge({ (loop.index)  :  '<a href="?#result" class="themenBtn" data-output="' ~ elemente.id ~ '">' ~ elemente.title  ~ '</a>' }) %}
     {% endfor %}
 
-        <div class="themenfilter grid-container content-grid-12"{% if ausgabeNur3Teaser or counter < 2 %} style="display: none"{% endif %}>
+        <div class="themenfilter grid-container content-grid-12">
             <div class="modul-blog-themenfilter">
                 <ul>
 
                     <li class="themenfilterbutton"><a href="?#result" class="themenBtn btnAll highlight" data-output="{{ categoryStr }}">{{ block.buttonText }}</a></li>
 
                     {% for btn in buttonArr %}
-<li class="themenfilterbutton">{{ btn|raw }}</li>
-
+                        <li class="themenfilterbutton">{{ btn|raw }}</li>
                     {% endfor %}
 
                 </ul>
             </div>
         </div>
 
-        <div class="artikels grid-container content-grid-12">
-            <div class="modul-blog-artikel">
-                <div id="articles">
-                    <div class="wl-article-container result"></div>
-                </div>
-            </div>
+        <div id="articles">
+            <div class="wl-article-container result"></div>
         </div>
+
 
     </div>
 </section>
