--- a/assets/sccs/components/_pagination-haendler-aktuelles-jobs.scss
+++ b/assets/sccs/components/_pagination-haendler-aktuelles-jobs.scss
@@ -1,4 +1,4 @@
-.modul-haendlerFilter, .modul-aktuelles{
+.modul-haendlerFilter, .modul-aktuelles, .modul-jobs{
 
   .pagination-container{
     padding-top: 80px;
