--- a/assets/sccs/styles.scss
+++ b/assets/sccs/styles.scss
@@ -16,7 +16,7 @@
 @import "components/footer";
 @import "components/haendlerFilterDropdown";
 @import "components/modul_haendlerFilter-u-modul-produktFilter";
-@import "components/pagination-haendler";
+@import "components/pagination-haendler-aktuelles-jobs";
 @import "components/modul_teaserAngebote";
 @import "components/modul_textLinks";
 @import "components/modul_auszeichnung";
@@ -39,11 +39,13 @@
 @import "components/modul_sliderHistory";
 @import "components/modul_sliderTeam";
 @import "components/modul_allesNeue";
+@import "components/modul_jobs";
 @import "components/modul_kontaktFormular";
 @import "components/modul_formularAntwort";
 @import "components/formular";
 @import "components/modul_blog";
 @import "components/blog-detail";
+@import "components/jobs-detail";
 
 /*
 @import "components/pagination-blog";
