--- a/assets/sccs/components/_navigation-style.scss
+++ b/assets/sccs/components/_navigation-style.scss
@@ -32,6 +32,7 @@ NAVIGATION
     }
 
     nav a {
+      padding-top: 5px;
       padding-left: 20px;
       padding-right: 20px;
       height: 50px;
