--- a/assets/sccs/styles.scss
+++ b/assets/sccs/styles.scss
@@ -42,6 +42,7 @@
 @import "components/modul_jobs";
 @import "components/modul_kontaktFormular";
 @import "components/modul_formularAntwort";
+@import "components/modul_youTube";
 @import "components/formular";
 @import "components/modul_blog";
 @import "components/blog-detail";
